--- a/css/mo.css
+++ b/css/mo.css
@@ -202,13 +202,37 @@ ion-icon:hover {
 
 /* Dashboard */
 
-.app-main__outer {
-    padding-left: 0 !important;
-}
 .dashboardMain {
     padding: 2em;
     padding-top: 10em;
 }
-.tableHead {
+
+.dashboardHeader {
     font-size: 32px;
+    font-weight: bold;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+  
+td {
+    border: 1px solid #3d3d3d;
+    text-align: right;
+    padding: 8px;
+}
+
+th {
+    border: 1px solid #3d3d3d;
+    background-color: #3d3d3d;
+    font-size: 22px;
+    color: #fff;
+    text-align: right;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
