--- a/css/sell.css
+++ b/css/sell.css
@@ -53,7 +53,7 @@ p {
     font-size: 1.1em;
 }
 
-input[type="button"] {
+.buyCourse {
     margin: 0%;
     padding: 0%;
     width: 100%;
@@ -65,9 +65,14 @@ input[type="button"] {
     background-color: #ed5025;
     cursor: pointer;
     font-family: 'Noto Sans Arabic', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
 }
 
-input[type="button"]:hover {
+.buyCourse:hover {
     /* background-color: #fcb900;
     box-shadow: 0px 1px 5px 2px #fcb900a4; */
     background-color: #e1441a;
